--- a/.github/workflows/Clean.yml
+++ b/.github/workflows/Clean.yml
@@ -12,12 +12,12 @@ on:
         description: 'Cleanup-Workflow-Runs'
         required: true
         default: '15'
-      # releases:
-        # description: 'Cleanup-old-Releases'
-        # required: true
-        # default: '15'
+      releases:
+        description: 'Cleanup-old-Releases'
+        required: true
+        default: '15'
   schedule:
-    - cron: 0 2 */7 * *
+    - cron: 0 2 */15 * *
     
 jobs: 
   # Cleanup-Old-Artifacts:
@@ -39,15 +39,15 @@ jobs:
           repository: ${{ github.repository }}
           retain_days: ${{ github.event.inputs.workflow }}
  
-  # Cleanup-old-Releases:
-    # needs: Cleanup-Workflow-Runs
-    # runs-on: ubuntu-18.04
-    # steps:
-      # - name: Cleanup-old-Releases
-        # uses: dev-drprasad/delete-older-releases@v0.1.0
-        # with:
-          # keep_latest: ${{ github.event.inputs.releases }}
-          # delete_tags: true
-        # env:
-          # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  Cleanup-old-Releases:
+    needs: Cleanup-Workflow-Runs
+    runs-on: ubuntu-18.04
+    steps:
+      - name: Cleanup-old-Releases
+        uses: dev-drprasad/delete-older-releases@v0.1.0
+        with:
+          keep_latest: ${{ github.event.inputs.releases }}
+          delete_tags: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
