--- a/.github/workflows/x86-lede-1701.yml
+++ b/.github/workflows/x86-lede-1701.yml
@@ -8,18 +8,18 @@ on:
         description: 'SSH connection to Actions'
         required: false
         default: 'false'
-      tag:
-        description: 'Generate release tag'
-        required: false
-        default: 'true'
-      release:
-        description: 'Upload firmware to release'
-        required: false
-        default: 'true'
-  # schedule:
-    # - cron:  '40 18 */3 * *'
-  # watch:
-    # types: started
+      # tag:
+        # description: 'Generate release tag'
+        # required: false
+        # default: 'true'
+      # release:
+        # description: 'Upload firmware to release'
+        # required: false
+        # default: 'true'
+  schedule:
+    - cron:  '40 18 * * *'
+  watch:
+    types: started
 
 jobs:
   x86-lede-1701:
@@ -73,8 +73,10 @@ jobs:
         cp -f /build/OpenWrtConfig/buildinfo/lede/lede-1701/x86-lede-1701.buildinfo "/build/lede/.config"
         cd /build/OpenWrtConfig/scripts/lede/lede-1701/
         chmod a+x ./*
-        ./lede.sh
+        ./lede-1701.sh
         sed -i '$d'  /build/lede/package/lean/default-settings/files/zzz-default-settings
+        sed -i '/DISTRIB_REVISION/d'  /build/lede/package/lean/default-settings/files/zzz-default-settings
+        sed -i '/DISTRIB_DESCRIPTION/d' /build/lede/package/lean/default-settings/files/zzz-default-settings
         cat /build/OpenWrtConfig/uciconf/lede-1701/lede_settings >> /build/lede/package/lean/default-settings/files/zzz-default-settings
         cat /build/lede/package/lean/default-settings/files/zzz-default-settings
     
