--- a/.github/workflows/x86-lede-1701.yml
+++ b/.github/workflows/x86-lede-1701.yml
@@ -77,7 +77,8 @@ jobs:
         sed -i '$d'  /build/lede/package/lean/default-settings/files/zzz-default-settings
         sed -i '/DISTRIB_REVISION/d'  /build/lede/package/lean/default-settings/files/zzz-default-settings
         sed -i '/DISTRIB_DESCRIPTION/d' /build/lede/package/lean/default-settings/files/zzz-default-settings
-        cat /build/OpenWrtConfig/uciconf/lede-1701/lede_settings >> /build/lede/package/lean/default-settings/files/zzz-default-settings
+        cat /build/OpenWrtConfig/uciconf/lede-1701/lede-1701_settings >> /build/lede/package/lean/default-settings/files/zzz-default-settings
+        sed -i 's/10.0.0.99/10.0.0.88/g' /build/lede/package/lean/default-settings/files/zzz-default-settings
         cat /build/lede/package/lean/default-settings/files/zzz-default-settings
     
     - name: SSH connection to Actions
@@ -130,7 +131,7 @@ jobs:
         echo "::set-output name=release_tag::$(date +%F_%H%M%S)_lede-17.01-x86"
         echo "::set-output name=release_date::$(date +"%F_%H%M%S")"
         touch release.txt
-        echo "10.0.0.99" > release.txt
+        echo "10.0.0.88" > release.txt
         echo "::set-output name=status::success"
         
     - name: Upload firmware to release
