--- a/.github/workflows/x86-lede-1701.yml
+++ b/.github/workflows/x86-lede-1701.yml
@@ -80,7 +80,9 @@ jobs:
         cat /build/OpenWrtConfig/uciconf/lede-1701/lede-1701_settings >> /build/lede/package/lean/default-settings/files/zzz-default-settings
         sed -i 's/10.0.0.99/10.0.0.88/g' /build/lede/package/lean/default-settings/files/zzz-default-settings
         cat /build/lede/package/lean/default-settings/files/zzz-default-settings
-    
+        sed -i "/CPU usage/a\                \<tr><td width="33%"><%:Build Date%></td><td>$(date +%F_%H%M%S)</tr>" /build/lede/package/lean/autocore/files/x86/index.htm
+        grep -C 3 "Build Date" /build/lede/package/lean/autocore/files/x86/index.htm
+        
     - name: SSH connection to Actions
       uses: P3TERX/ssh2actions@v1.0.0
       if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
