--- a/.github/workflows/x86-lede-1701.yml
+++ b/.github/workflows/x86-lede-1701.yml
@@ -81,7 +81,7 @@ jobs:
         sed -i 's/10.0.0.99/10.0.0.88/g' /build/lede/package/lean/default-settings/files/zzz-default-settings
         cat /build/lede/package/lean/default-settings/files/zzz-default-settings
         sed -i "/CPU usage/a\                \<tr><td width="33%"><%:Build Date%></td><td>$(date +%F_%H%M%S)</tr>" /build/lede/package/lean/autocore/files/x86/index.htm
-        sed -i "/Kernel Version/a\                \<tr><td width="33%"><%:IPADDR%></td><td><%=luci.sys.exec("uci get network.lan.ipaddr") or "?"%></td></tr>" /build/lede/package/lean/autocore/files/x86/index.htm
+        sed -i '/Kernel Version/a\                \<tr><td width="33%"><%:IPADDR%></td><td><%=luci.sys.exec("uci get network.lan.ipaddr") or "?"%></td></tr>' /build/lede/package/lean/autocore/files/x86/index.htm
         grep -B 10 "Build Date" /build/lede/package/lean/autocore/files/x86/index.htm
         
     - name: SSH connection to Actions
