--- a/.github/workflows/R2S-lede.yml
+++ b/.github/workflows/R2S-lede.yml
@@ -77,6 +77,8 @@ jobs:
         chmod a+x ./*
         ./lede-master.sh
         sed -i '$d'  /build/lede/package/lean/default-settings/files/zzz-default-settings
+        sed -i '/DISTRIB_REVISION/d'  /build/lede/package/lean/default-settings/files/zzz-default-settings
+        sed -i '/DISTRIB_DESCRIPTION/d' /build/lede/package/lean/default-settings/files/zzz-default-settings
         cat /build/OpenWrtConfig/uciconf/lede-master/lede-master_settings >> /build/lede/package/lean/default-settings/files/zzz-default-settings
         sed -i 's/10.0.0.199/10.0.0.77/g' /build/lede/package/lean/default-settings/files/zzz-default-settings
         cat /build/lede/package/lean/default-settings/files/zzz-default-settings
