--- a/.github/workflows/R2S-lede.yml
+++ b/.github/workflows/R2S-lede.yml
@@ -104,8 +104,9 @@ jobs:
         time make -j$[$(nproc)+1]   ||  make -j1 V=s
         tree bin/
         tree -d bin/
-        ls -lSha /build/lede/bin/targets/rockchip/armv8
-        
+        cd /build/lede/bin/targets/rockchip/armv8 && ls -lSha
+        gzip -d *.gz
+        gzip -9 *.img
     - name: Prepare artifact
       run: |
         rm -rf $(find /build/lede/bin/targets/ -type d -name "packages")
