--- a/.github/workflows/x86-lede.yml
+++ b/.github/workflows/x86-lede.yml
@@ -104,8 +104,10 @@ jobs:
         time make -j$[$(nproc)+1]   ||  make -j1 V=s
         tree bin/
         tree -d bin/
-        ls -lSha /build/lede/bin/targets/x86/64/
-        
+        cd /build/lede/bin/targets/x86/64/ && ls -lSha
+        gzip -d *.gz
+        gzip -9 *.img
+        gzip -9 *.vmdk
     - name: Prepare artifact
       run: |
         rm -rf $(find /build/lede/bin/targets/ -type d -name "packages")
