--- a/.github/workflows/x86-lede-1701.yml
+++ b/.github/workflows/x86-lede-1701.yml
@@ -17,7 +17,7 @@ on:
         # required: false
         # default: 'true'
   schedule:
-    - cron:  '40 18 * * *'
+    - cron:  '40 18 */7 * *'
   watch:
     types: started
 
