--- a/.github/workflows/x86-lede-1701.yml
+++ b/.github/workflows/x86-lede-1701.yml
@@ -131,7 +131,7 @@ jobs:
         echo "::set-output name=release_tag::$(date +%F_%H%M%S)_lede-17.01-x86"
         echo "::set-output name=release_date::$(date +"%F_%H%M%S")"
         touch release.txt
-        echo "10.0.0.88" > release.txt
+        echo "http://10.0.0.88" > release.txt
         echo "::set-output name=status::success"
         
     - name: Upload firmware to release
