--- a/.github/workflows/x86-lede.yml
+++ b/.github/workflows/x86-lede.yml
@@ -133,7 +133,7 @@ jobs:
         echo "::set-output name=release_tag::$(date +%F_%H%M%S)_lede-x86"
         echo "::set-output name=release_date::$(date +"%F_%H%M%S")"
         touch release.txt
-        echo "10.0.0.66" > release.txt
+        echo "http://10.0.0.66" > release.txt
         echo "::set-output name=status::success"
         
     - name: Upload firmware to release
