--- a/.github/workflows/x86-lede-1701.yml
+++ b/.github/workflows/x86-lede-1701.yml
@@ -57,7 +57,7 @@ jobs:
         sudo mkdir -pv /build/{package,upload}
         sudo chown -R runner:runner /build
         cd /build
-        svn co https://github.com/we2oxy/OpenWrtConfig/trunk/ OpenWrtConfig
+        git clone https://github.com/we2oxy/OpenWrtConfig.git OpenWrtConfig
         git clone --branch lede-17.01 --single-branch  https://github.com/coolsnowwolf/openwrt.git "lede"
         cd lede
         echo "#src-git kenzo https://github.com/kenzok8/openwrt-packages" >> feeds.conf.default
