--- a/.github/workflows/x86-lede.yml
+++ b/.github/workflows/x86-lede.yml
@@ -89,9 +89,9 @@ jobs:
       env:
         TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-
-    - name: Build
-      id: build
+        
+    - name: Defconfig
+      id: defconfig
       run: |
         echo "Build lede":$(date +%F_%H%M%S)
         cd /build/lede/ && ls -lash
@@ -100,6 +100,20 @@ jobs:
         ./scripts/diffconfig.sh > /build/upload/x86-lede.buildinfo
         pwd  && cat /build/upload/x86-lede.buildinfo
         wc -l /build/upload/x86-lede.buildinfo
+
+    - name: Deliver firmware
+      if: ${{ always() }}
+      uses: actions/upload-artifact@v2
+      with:
+        name: OpenWrt_firmware
+        path: /build/upload/
+        if-no-files-found: ignore
+        
+    - name: Build
+      id: build
+      run: |
+        echo "Build lede":$(date +%F_%H%M%S)
+        cd /build/lede/ && ls -lash
         echo "start make!":$(date +%F_%H%M%S)
         time make -j$[$(nproc)+1] || make -j1 V=s
         tree bin/
@@ -116,15 +130,7 @@ jobs:
         ls -lh 
         for source_name in `ls openwrt*`;do tag_name=$(date +%F_%H%M%S)_  modify_name=$tag_name$source_name;mv $source_name $modify_name;done
         ls -lh /build/upload/
-
-    - name: Deliver firmware
-      if: ${{ always() }}
-      uses: actions/upload-artifact@v2
-      with:
-        name: OpenWrt_firmware
-        path: /build/upload/
-        if-no-files-found: ignore
-
+        
     - name: Generate release tag
       id: tag
       #if: ${{ github.event.inputs.tag == 'true' }}
