--- a/.github/workflows/R2S-lede.yml
+++ b/.github/workflows/R2S-lede.yml
@@ -112,6 +112,7 @@ jobs:
         tree bin/
         tree -d bin/
         cd /build/lede/bin/targets/rockchip/armv8 && ls -lSha
+        echo "::set-output name=BUILD_STATUS::success"
 
     - name: Prepare artifact
       run: |
@@ -133,20 +134,19 @@ jobs:
         if-no-files-found: ignore
         
     - name: Generate release tag
+      if: steps.build.outputs.BUILD_STATUS == 'success'
       id: tag
-      #if: ${{ github.event.inputs.tag == 'true' }}
-      #if: (github.event.inputs.tag == 'true') || contains(github.event.action, 'tag')
       run: |
         echo "::set-output name=release_tag::$(date +%F_%H%M%S)_lede-R2S"
         echo "::set-output name=release_date::$(date +"%F_%H%M%S")"
         touch release.txt
         echo "http://10.0.0.77" > release.txt
-        echo "::set-output name=status::success"
+        #echo "::set-output name=status::success"
+        echo "::set-output name=TAG_STATUS::success"
         
     - name: Upload firmware to release
+      if: steps.tag.outputs.TAG_STATUS == 'success'
       uses: softprops/action-gh-release@v0.1.8
-      #if: ${{ github.event.inputs.release == 'true' }}
-      #if: (github.event.inputs.release == 'true') || contains(github.event.action, 'release')
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
