--- a/.github/workflows/x86-lede-1701.yml
+++ b/.github/workflows/x86-lede-1701.yml
@@ -86,7 +86,7 @@ jobs:
         echo "Build lede":$(date +%F_%H%M%S)
         cd /build/lede/ && ls -lash
         make defconfig
-        make -j8 download || make -j8 download V=s
+        make -j8 download || make -j1 download || make -j1 download V=s 
         ./scripts/diffconfig.sh > /build/buildinfo/x86-lede-1701.buildinfo
         pwd && cat /build/buildinfo/x86-lede-1701.buildinfo
         wc -l /build/buildinfo/x86-lede-1701.buildinfo
@@ -106,7 +106,7 @@ jobs:
         cd /build/lede/
         ls -lash
         echo "start make!":$(date +%F_%H%M%S)
-        make -j$(($(nproc) + 1)) || make -j1 V=s
+        make -j$(($(nproc) + 1)) || sh -c "make dirclean && git pull && ./scripts/feeds update -a && ./scripts/feeds install -a && cat .config && make -j1" || make -j1 V=s
         tree bin/
         tree -d bin/
         cd /build/lede/bin/targets/x86/64 && ls -lSha
