--- a/.github/workflows/x86-lede-1701.yml
+++ b/.github/workflows/x86-lede-1701.yml
@@ -106,7 +106,7 @@ jobs:
         cd /build/lede/
         ls -lash
         echo "start make!":$(date +%F_%H%M%S)
-        make -j$(($(nproc) + 1)) || sh -c "make dirclean && git pull && ./scripts/feeds update -a && ./scripts/feeds install -a && cat .config && make -j1" || make -j1 V=s
+        sh -c "cat .config && make -j$(($(nproc) + 1))" || sh -c "make dirclean && git pull && ./scripts/feeds update -a && ./scripts/feeds install -a && cat .config && make -j1" || make -j1 V=s
         tree bin/
         tree -d bin/
         cd /build/lede/bin/targets/x86/64 && ls -lSha
