--- a/.github/workflows/x86-lede.yml
+++ b/.github/workflows/x86-lede.yml
@@ -90,7 +90,10 @@ jobs:
         make defconfig
         make -j8 download || make -j1 download || make -j1 download V=s 
         ./scripts/diffconfig.sh > /build/buildinfo/x86-lede.buildinfo
-        pwd && cat /build/buildinfo/x86-lede.buildinfo
+        pwd && cat /build/buildinfo/x86-lede.buildinfo && pwd
+        sed -n '/is not set/p' /build/buildinfo/x86-lede.buildinfo
+        wc -l /build/buildinfo/x86-lede.buildinfo
+        sed -i '/is not set/d' /build/buildinfo/x86-lede.buildinfo
         wc -l /build/buildinfo/x86-lede.buildinfo
 
     - name: Deliver buildinfo
