--- a/.github/workflows/R2S-lede.yml
+++ b/.github/workflows/R2S-lede.yml
@@ -95,6 +95,8 @@ jobs:
         wc -l /build/buildinfo/R2S-lede.buildinfo
         sed -i '/is not set/d' /build/buildinfo/R2S-lede.buildinfo
         wc -l /build/buildinfo/R2S-lede.buildinfo
+        cat /build/buildinfo/R2S-lede.buildinfo
+        echo "########################################"
 
     - name: Deliver buildinfo
       if: ${{ always() }}
