--- a/.github/workflows/x86-lede.yml
+++ b/.github/workflows/x86-lede.yml
@@ -53,7 +53,6 @@ jobs:
         df -hP
         sudo mkdir -pv /build/{package,upload,buildinfo}
         sudo chown -R runner:runner /build
-        git clone https://github.com/we2oxy/OpenWrtConfig.git /build/OpenWrtConfig
         git clone https://github.com/coolsnowwolf/lede.git /build/lede
         cd /build/lede
         echo "src-git helloworld https://github.com/fw876/helloworld.git" >> feeds.conf.default
@@ -90,13 +89,16 @@ jobs:
         make defconfig
         make -j8 download || make -j1 download || make -j1 download V=s 
         ./scripts/diffconfig.sh > /build/buildinfo/x86-lede.buildinfo
+        cp ".config" /build/buildinfo/config.txt
         pwd && cat /build/buildinfo/x86-lede.buildinfo && pwd
         sed -n '/is not set/p' /build/buildinfo/x86-lede.buildinfo
         wc -l /build/buildinfo/x86-lede.buildinfo
+        sed -i '/is not set/d' /build/buildinfo/config.txt
         sed -i '/is not set/d' /build/buildinfo/x86-lede.buildinfo
         wc -l /build/buildinfo/x86-lede.buildinfo
         cat /build/buildinfo/x86-lede.buildinfo
         echo "########################################"
+        ls -lh /build/buildinfo/
 
     - name: Deliver buildinfo
       if: ${{ always() }}
@@ -113,7 +115,7 @@ jobs:
         cd /build/lede/
         ls -lash
         echo "start make!":$(date +%F_%H%M%S)
-        sh -c "cat .config && make -j$(($(nproc) + 1))" || sh -c "make dirclean && git pull && ./scripts/feeds update -a && ./scripts/feeds install -a && cat .config && make -j1" || make -j1 V=s
+        sh -c "cat .config && echo '$(nproc) thread compile' && make -j$(($(nproc) + 1))" || sh -c "make dirclean && git pull && ./scripts/feeds update -a && ./scripts/feeds install -a && cat .config && echo '***************Rebuild***************' && make -j1 V=s"
         tree bin/
         tree -d bin/
         cd /build/lede/bin/targets/x86/64/ && ls -lSha
@@ -128,6 +130,7 @@ jobs:
         cd /build/upload/
         ls -lh 
         for source_name in `ls openwrt*`;do tag_name=$(date +%F_%H%M%S)_  modify_name=$tag_name$source_name;mv $source_name $modify_name;done
+        gzip -9 "*.vmdk"
         ls -lh /build/upload/
         
     - name: Deliver firmware
