--- a/.github/workflows/Phicomm_N1.yml
+++ b/.github/workflows/Phicomm_N1.yml
@@ -169,6 +169,7 @@ jobs:
         echo "::set-output name=release_date::$(date +"%F_%H%M%S")"
         touch release.txt
         echo "http://10.0.0.223" > release.txt
+        echo "PASSWD = 'password'" > release.txt
         #echo "::set-output name=status::success"
         echo "::set-output name=TAG_STATUS::success"
         
