--- a/.github/workflows/Phicomm_N1.yml
+++ b/.github/workflows/Phicomm_N1.yml
@@ -82,9 +82,11 @@ jobs:
         cp $GITHUB_WORKSPACE/uciconf/Phicomm_N1/make.env /build/openwrt_packit/make.env
         cp $GITHUB_WORKSPACE/uciconf/Phicomm_N1/*.gz /build/openwrt_packit/
         sed -i "N;10aOPENWRT_VER='$(date +%F)'" /build/openwrt_packit/make.env
-        mkdir scripts && cp mk_s905d_n1.sh build_s905d_n1.sh
-        mv mk*.sh scripts/
-        ls -lh 
+        mkdir /build/openwrt_packit/Build_scripts_bak
+        cp /build/openwrt_packit/mk_s905d_n1.sh /build/openwrt_packit/build_s905d_n1.sh
+        mv /build/openwrt_packit/mk*.sh /build/openwrt_packit/Build_scripts_bak/
+        ls -lh /build/openwrt_packit/
+        ls -lh /build/openwrt_packit/Build_scripts_bak/
       
     - name: SSH connection to Actions
       uses: P3TERX/ssh2actions@v1.0.0
