--- a/.github/workflows/Phicomm_N1.yml
+++ b/.github/workflows/Phicomm_N1.yml
@@ -129,7 +129,7 @@ jobs:
         cd /build/lede/
         ls -lash
         echo "start make!":$(date +%F_%H%M%S)
-        make -j$(($(nproc) + 1)) || sh -c "make dirclean && git pull && ./scripts/feeds update -a && ./scripts/feeds install -a && cat .config && echo '***************Rebuild***************' && make -j1 V=s"
+        make -j$(($(nproc) + 1)) || sh -c "make clean ; ./scripts/feeds update -a ; ./scripts/feeds install -a ; cat .config ; make -j1 V=s"
         tree bin/
         tree -d bin/
         cd /build/lede/bin/targets/armvirt/64 && ls -lSha
