--- a/.github/workflows/Phicomm_N1.yml
+++ b/.github/workflows/Phicomm_N1.yml
@@ -82,6 +82,7 @@ jobs:
         cp $GITHUB_WORKSPACE/uciconf/Phicomm_N1/make.env /build/openwrt_packit/make.env
         cp $GITHUB_WORKSPACE/uciconf/Phicomm_N1/*.gz /build/openwrt_packit/
         sed -i "N;10aOPENWRT_VER='$(date +%F)'" /build/openwrt_packit/make.env
+        cat /build/openwrt_packit/make.env
         mkdir /build/openwrt_packit/Build_scripts_bak
         cp /build/openwrt_packit/mk_s905d_n1.sh /build/openwrt_packit/build_s905d_n1.sh
         mv /build/openwrt_packit/mk*.sh /build/openwrt_packit/Build_scripts_bak/
