--- a/.github/workflows/x86-lede-1701.yml
+++ b/.github/workflows/x86-lede-1701.yml
@@ -64,6 +64,8 @@ jobs:
       run: |
         echo "Configuration Customization":$(date +%F_%H%M%S)
         sh $GITHUB_WORKSPACE/scripts/lede-1701/lede-1701.sh
+        sed -i 's/luci-theme-bootstrap/luci-theme-argon/' /build/lede/feeds/luci/collections/luci/Makefile
+        cat /build/lede/feeds/luci/collections/luci/Makefile
         cat $GITHUB_WORKSPACE/buildinfo/x86-lede-1701.buildinfo > "/build/lede/.config"
         sed -i '$d'  /build/lede/package/lean/default-settings/files/zzz-default-settings
         sed -i '/DISTRIB_REVISION/d' /build/lede/package/lean/default-settings/files/zzz-default-settings
