--- a/.github/workflows/R2S-lede.yml
+++ b/.github/workflows/R2S-lede.yml
@@ -8,6 +8,13 @@ on:
         description: 'SSH connection to Actions'
         required: false
         default: 'false'
+  push:
+    paths:
+      #- '.github/workflows/R2S-lede.yml'
+      - 'buildinfo/R2S-lede.buildinfo'
+      - '!scripts/**'
+      - '!uciconf/**'
+      - '!README.md'
   schedule:
     - cron:  '40 19 * * 0,3'
   watch:
