--- a/.github/workflows/x86-lede-1701.yml
+++ b/.github/workflows/x86-lede-1701.yml
@@ -8,6 +8,13 @@ on:
         description: 'SSH connection to Actions'
         required: false
         default: 'false'
+  push:
+    paths:
+      #- '.github/workflows/x86-lede-1701.yml'
+      - 'buildinfo/x86-lede-1701.buildinfo'
+      - '!scripts/**'
+      - '!uciconf/**'
+      - '!README.md'
   schedule:
     - cron:  '40 15 * * 4'
   watch:
@@ -80,6 +87,7 @@ jobs:
       id: configuration
       run: |
         echo "Configuration Customization":$(date +%F_%H%M%S)
+        sed -i '52s@+libelf @+libelf +libcap @' /build/lede-1701/package/network/utils/iproute2/Makefile
         sed -i 's/luci-theme-bootstrap/luci-theme-argon/' /build/lede-1701/feeds/luci/collections/luci/Makefile
         cat /build/lede-1701/feeds/luci/collections/luci/Makefile
         sed -i '$d' /build/lede-1701/package/lean/default-settings/files/zzz-default-settings
@@ -105,7 +113,6 @@ jobs:
         sed -i 's,ispip.clang.cn/all_cn,cdn.jsdelivr.net/gh/QiuSimons/Chnroute@master/dist/chnroute/chnroute.txt,' /build/lede-1701/feeds/helloworld/luci-app-ssr-plus/root/etc/init.d/shadowsocksr
         sed -i 's,YW5vbnltb3Vz/domain-list-community/release/gfwlist.txt,Loyalsoldier/v2ray-rules-dat/release/gfw.txt,'  /build/lede-1701/feeds/helloworld/luci-app-ssr-plus/root/etc/init.d/shadowsocksr
         sed -i '/Clang.CN.CIDR/a\o:value("https://cdn.jsdelivr.net/gh/QiuSimons/Chnroute@master/dist/chnroute/chnroute.txt", translate("QiuSimons/Chnroute"))\' /build/lede-1701/feeds/helloworld/luci-app-ssr-plus/luasrc/model/cbi/shadowsocksr/advanced.lua
-
 
     - name: SSH connection to Actions
       uses: P3TERX/ssh2actions@v1.0.0
