--- a/.github/workflows/x86-lede.yml
+++ b/.github/workflows/x86-lede.yml
@@ -42,7 +42,7 @@ jobs:
         sudo -E apt-get remove -y --purge azure-cli ghc zulu* hhvm llvm* firefox google* dotnet* powershell mysql* php* mssql-tools msodbcsql17 android*
         sudo -E apt-get update -y 
         sudo -E apt-get full-upgrade -y 
-        sudo -E apt-get -qq install $(curl -fsSL git.io/depends-ubuntu-1804) rdate
+        sudo -E apt-get -qq install $(curl -fsSL git.io/depends-ubuntu-1804) rdate ca-certificates
         sudo -E apt-get autoremove -y --purge 
         sudo -E apt-get clean -y 
         
