--- a/.github/workflows/x86-lede-1701.yml
+++ b/.github/workflows/x86-lede-1701.yml
@@ -140,11 +140,11 @@ jobs:
       run: |
         cd /build/lede-1701/
         echo -e "$(nproc) thread compile"
-        time make tools/compile -j$(nproc) || time make tools/compile -j1 V=s
-        time make toolchain/compile -j$(nproc) || time make toolchain/compile -j1 V=s
-        time make target/compile -j$(nproc) || time make target/compile -j1 V=s IGNORE_ERRORS=1
+        time make tools/compile -j$(nproc)
+        time make toolchain/compile -j$(nproc)
+        time make target/compile -j$(nproc)
         time make diffconfig
-        time make package/compile -j$(nproc) IGNORE_ERRORS=1 || time make package/compile -j1 V=s IGNORE_ERRORS=1
+        time make package/compile -j$(nproc) IGNORE_ERRORS=1
         time make package/index
 
     - name: Generate Firmware
@@ -152,8 +152,8 @@ jobs:
       run: |
         cd /build/lede-1701/
         echo -e "$(nproc) thread compile"
-        time make package/install -j$(nproc) || time make package/install -j1 V=s
-        time make target/install -j$(nproc) || time make target/install -j1 V=s
+        time make package/install -j$(nproc)
+        time make target/install -j$(nproc)
         time make checksum
         tree bin/
         tree -d bin/
