--- a/.github/workflows/R2S-lede.yml
+++ b/.github/workflows/R2S-lede.yml
@@ -73,8 +73,8 @@ jobs:
         svn co https://github.com/zxlhhyccc/luci-app-v2raya/trunk/ luci-app-v2raya/
         svn co https://github.com/immortalwrt/packages/trunk/net/v2raya/ v2raya/
         cd /build/lede
-        ./scripts/feeds update -a
-        ./scripts/feeds install -a
+        sh -c "./scripts/feeds update -a" || sh -c "./scripts/feeds update -a"
+        sh -c "./scripts/feeds install -a" || sh -c "./scripts/feeds install -a"
         wget -O /build/lede/R2S-lede.buildinfo https://raw.githubusercontent.com/we2oxy/Build-Lede/master/buildinfo/R2S-lede.buildinfo
         cat /build/lede/R2S-lede.buildinfo > "/build/lede/.config"
     - name: Configuration Customization
