--- a/.github/workflows/x86-lede.yml
+++ b/.github/workflows/x86-lede.yml
@@ -143,11 +143,16 @@ jobs:
         cd /build/lede/
         echo -e "$(nproc) thread compile"
         make -j$(($(nproc) + 1)) || make -j$(($(nproc) + 1)) V=s 2>&1 | tee -a build.log 
-        grep -C 20 -i -E "^make.*(error|[12345]...Entering dir)" build.log 
         tree bin/
         tree -d bin/
         cd /build/lede/bin/targets/x86/64/ && ls -lSha
         echo "::set-output name=BUILD_STATUS::success"
+
+    - name: Check Error
+      if: ${{ failure() }}
+      run: |
+        echo "Check Error":$(date +%F_%H%M%S)
+        grep -C 20 -i -E "^make.*(error|[12345]...Entering dir)" build.log
 
     - name: Prepare artifact
       run: |
