--- a/.github/workflows/x86-lede.yml
+++ b/.github/workflows/x86-lede.yml
@@ -59,8 +59,8 @@ jobs:
         svn co https://github.com/zxlhhyccc/luci-app-v2raya/trunk/ luci-app-v2raya/
         svn co https://github.com/immortalwrt/packages/trunk/net/v2raya/ v2raya/
         cd /build/lede
-        sh -c "./scripts/feeds update -a" || sh -c "./scripts/feeds update -a"
-        sh -c "./scripts/feeds install -a" || sh -c "./scripts/feeds install -a"
+        ./scripts/feeds update -a
+        ./scripts/feeds install -a
         wget -O /build/lede/x86-lede.buildinfo https://raw.githubusercontent.com/we2oxy/Build-Lede/master/buildinfo/x86-lede.buildinfo
         cat /build/lede/x86-lede.buildinfo > "/build/lede/.config"
         
